# docker-examples

./: README.md
grpc/: Dockerfile.grpc-example  README.md
grpc/example/: CMakeLists.txt
grpc/example/client/: CMakeLists.txt  client.cpp
grpc/example/proto/: tunnel.proto
grpc/example/server/: CMakeLists.txt  server.cpp
onnxruntime/: Dockerfile.gen-onnx  Dockerfile.ort-cpu-example  README.md
onnxruntime/example/: CMakeLists.txt  gen_onnx.py  generate_model.py  main-cpu.cpp
opencv/: Dockerfile.opencv-cpu-example  README.md
opencv/example/: CMakeLists.txt  main-cpu-transforms.cpp  main-cpu.cpp
throughput/: CMakeLists.txt  Dockerfile.client-python  Dockerfile.gen-onnx  Dockerfile.server-cpp  Dockerfile.server-python  README.md
throughput/client/: client.py
throughput/proto/: CMakeLists.txt  tunnel.proto
throughput/server/: CMakeLists.txt  server.cpp  server.py
